# anygeom-py

./: README.md  pyproject.toml  test_anygeom.py
anygeom/: __init__.py  geometries.py
